# hy

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: client.rs  history.rs  lib.rs  main.rs  render.rs  say.rs  service.rs  state.rs
src/client/: dictionary.rs  dictionary_test.rs  exp.rs  exp_test.rs  http.rs  iciba.rs  iciba_test.rs  mod.rs  youdao.rs  youdao_test.rs
src/history/: record.rs
src/pronounce/: mod.rs  say.rs
