[package]
name = "hy"
version = "0.2.3"
authors = ["shohi <oshohi@gmail.com>"]
edition = "2018"

[[bin]]
name = "hy"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"

# TODO: update reqwest's version once new tag is cut based on tokio 0.2.0.
# use commit after 0f32c4a (integrate tokio 0.2.0).
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }

futures = "0.3.1"

serde = "^1.0.103"
serde_derive = "^1.0.103"
serde_json = "^1.0.44"

log = "^0.4.8"
env_logger = "^0.7.1"

chrono = "^0.4.10"
termion = "^1.5.4"
regex = "^1.3.1"

tokio = { version = "^0.2.0", features = ["macros", "process", "time"] }

async-trait = "^0.1.21"

humantime = "^1.3.0"

shellexpand = "1.0"
