[package]
name = "hy"
version = "0.2.4"
authors = ["shohi <oshohi@gmail.com>"]
edition = "2018"

[[bin]]
name = "hy"
path = "src/main.rs"

[dependencies]
clap = "^2.33.0"

# NOTE: reqwest needs tokio 0.2.0 (async/await)
reqwest = "^0.10.1"
tokio = { version = "^0.2.9", features = ["macros", "process", "time"] }

futures = "0.3.1"
async-trait = "^0.1.22"

serde = "^1.0.104"
serde_derive = "^1.0.104"
serde_json = "^1.0.44"

log = "^0.4.8"
env_logger = "^0.7.1"

chrono = "^0.4.10"
termion = "^1.5.4"
regex = "^1.3.3"

humantime = "^1.3.0"
shellexpand = "^1.1.1"
