[package]
name = "hy"
version = "0.2.4"
authors = ["shohi <oshohi@gmail.com>"]
edition = "2018"

[[bin]]
name = "hy"
path = "src/main.rs"

[dependencies]
clap = "^2.33.0"

# NOTE: reqwest needs tokio 0.2.0 (async/await)
reqwest = "0.10.4"
tokio = { version = "0.2.20", features = ["macros", "process", "time"] }

futures = "^0.3.5"
async-trait = "0.1.30"

serde = "1.0.108"
serde_derive = "1.0.108"
serde_json = "1.0.52"

log = "0.4.8"
env_logger = "^0.7.1"

chrono = "0.4.11"
termion = "1.5.5"
regex = "1.3.7"

humantime = "2.0.0"
shellexpand = "2.0.0"
